Closed Bug 166716 Opened 22 years ago Closed 22 years ago

PR_CreateFileMap should not assert

Categories

(NSPR :: NSPR, defect)

4.2.1
x86
OS/2
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: julien.pierre, Assigned: wtc)

Details

Attachments

(1 file, 1 obsolete file)

Even though this function is not implemented, NSS 3.6 is calling it and checks
for PR_NOT_IMPLEMENTED_ERROR . Therefore, the assertion in this function needs
to be removed from the OS/2 NSPR code.
This is necessary for NSS 3.6 landing to Mozilla
Attached patch Proposed patchSplinter Review
This patch removes the assertions from the unimplemented
memory-mapped file functions on OS/2 and Mac and adds
PR_SetError(PR_NOT_IMPLEMENTED_ERROR, 0) calls to those
functions on BeOS.  (The BeOS functions don't have the
assertions.)
Attachment #97863 - Attachment is obsolete: true
Patch checked into the tip, NSPR_4_2_BRANCH, and
NSPRPUB_PRE_4_2_CLIENT_BRANCH of NSPR.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Target Milestone: --- → 4.2.2
verify, this code was checked in.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: