Bug 166716: do not assert in the unimplemented memory-mapped file functions.  It is sufficient for them to fail with the not implemented error. Modified Files: bmmap.c macio.c os2misc.c