nsprpub/pr/src/md/mac/macio.c
@@ -1908,14 +1908,12 @@ PRStatus _MD_CreateFileMap(PRFileMap *fmap, PRInt64 size)
 {
 #pragma unused (fmap, size)
 
-    PR_ASSERT(!"Not implemented");
     PR_SetError(PR_NOT_IMPLEMENTED_ERROR, 0);
     return PR_FAILURE;
 }
 
 PRInt32 _MD_GetMemMapAlignment(void)
 {
-    PR_ASSERT(!"Not implemented");
     PR_SetError(PR_NOT_IMPLEMENTED_ERROR, 0);
     return -1;
 }
@@ -1927,7 +1925,6 @@ void * _MD_MemMap(
 {
 #pragma unused (fmap, offset, len)
 
-    PR_ASSERT(!"Not implemented");
     PR_SetError(PR_NOT_IMPLEMENTED_ERROR, 0);
     return NULL;
 }
@@ -1936,7 +1933,6 @@ PRStatus _MD_MemUnmap(void *addr, PRUint32 len)
 {
 #pragma unused (addr, len)
 
-    PR_ASSERT(!"Not implemented");
     PR_SetError(PR_NOT_IMPLEMENTED_ERROR, 0);
     return PR_FAILURE;
 }
@@ -1945,7 +1941,6 @@ PRStatus _MD_CloseFileMap(PRFileMap *fmap)
 {
 #pragma unused (fmap)
 
-    PR_ASSERT(!"Not implemented");
     PR_SetError(PR_NOT_IMPLEMENTED_ERROR, 0);
     return PR_FAILURE;
 }
